Adding more to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.synctex.gz
 
 # PDF versions of the notes (compile them yourself)
-**/Notes/*.pdf
+**/Notes/**.pdf
 
 # ipynb checkpoints
 **/*.ipynb_checkpoints/    
